Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-14 (SVN):
    * utils (dhcc, hcc, genmodel, jsh2color, light, qbsp, qfiles, vis):
      correctly handle command line options requiring additional args.

2012-07-14 (SVN):
    * utils, threads.c: added Thread_GetNumCPUS() based on a nice entry
      at stackoverflow.com. moved the MAX_THREADS macro to threads.h.

2012-07-14 (SVN):
    * utils, jsh2colour: removed excessive stdout prints. renamed the
      thread procedures. removed lightdatasize computation from the end
      of LightWorld(). Moved CloseDefFile() call before MakeLITFile().
    * utils, vis: removed some commented out code. renamed min variable
      to minsee in GetNextPortal().

2012-07-14 (SVN):
    * utils: cleaned up the threads mess. windows no longer needs to be
      __alpha for multi-threading. added pthread support for unix. added
      irix sprocsp support based on code from GtkRadiant. windows tls
      code in vis is removed. multi-threads are available for light, vis
      and jsh2colour on windows and unix. further cleanups will follow.

2012-07-14 (SVN):
    * scripts: added config.guess and config.sub from savannah git repo.
      added ax_pthread.m4 from the autoconf-archive git repo. added new
      pthread.sh script based on the SDL library's configury.

2012-07-14 (SVN):
    * updated version date stamp to 2012-07-14.

2012-07-14 (SVN):
    * utils, jsh2colour: several cleanups: the -lit and -force command
      line switches are now ignored. removed several global varss which
      have no real meaning in the tool. removed some unused functions.
      prepared the code so that it can be run multithreaded. incremented
      its version to 1.2.5.

2012-07-11 (SVN):
    * utils: Replaced rest of the malloc() calls by SafeMalloc() in all
      of the utils.

2012-07-11 (SVN):
    * utils: Added new helper SafeStrdup(). Replaced all strdup() calls